--- a/public/css/stylesheet-index.css
+++ b/public/css/stylesheet-index.css
@@ -98,10 +98,10 @@ body {
     z-index: 10;
 }*/
 .main {
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     display: block;
-    height: 100%;
-    margin-top: 60px;
+    /*height: 100%;
+    margin-top: 60px;*/
 }
 .mainInner{
     display: table;
