--- a/public/css/stylesheet-index.css
+++ b/public/css/stylesheet-index.css
@@ -31,6 +31,10 @@ a {
   color: #efefef;
 }
 
+.trans_registration {
+  color: #0f0f0f;
+}
+
 .container {
   text-align: center;
   padding: 20px 0;
