フロントエンド復旧しました

--- a/app/views/registration.ejs
+++ b/app/views/registration.ejs
@@ -14,7 +14,7 @@
     <!--script-->
     <script type="text/javascript" src="/javascript/loading.js"></script>
 
-    <title>チャットアプリ</title>
+    <title>新規登録</title>
   </head>
 
   <!--loading-->
@@ -44,8 +44,8 @@
 
     <div class="top-wrapper">
       <div class="container">
-        <h2>Please sign in</h2>
-        <form class="login" action="" method="POST">
+        <h2>Please Registration</h2>
+        <form class="login" action="/index" method="POST">
           <input class="id" type="text" name="userid" placeholder="Enter ID" />
           <input
             class="pass"
@@ -55,14 +55,6 @@
           />
           <button class="sendButton" type="submit">送信</button>
         </form>
-
-        <div class="trans_registration">
-          <a class="trans_registration" href="registration"
-            >登録済みでない方はこちら</a
-          >
-          <a class="trans_registration" href="students">生徒</a>
-          <a class="trans_registration" href="teacher">先生</a>
-        </div>
       </div>
     </div>
 
