--- a/app/views/registration.ejs
+++ b/app/views/registration.ejs
@@ -30,44 +30,55 @@
 
   <body>
     <header>
-      <div class="container">
-        <a href="/">
-          <img
-            class="header-logo"
-            width="150"
-            height="70"
-            src="/image/ISDL_logo.png"
-          />
-        </a>
-      </div>
+        <div class="container">
+          <a href="/">
+            <img class="header-logo" width="150" height="70" src="/image/ISDL_logo.png">
+          </a>
+            <!--
+            <div class="header-list">
+                <ul>
+                    <li><a href="./about.html">about</a></li>
+                    <li><a href="./goods.html">goods</a></li>
+                    <li><a href="./member.html">member</a></li>
+                    <li><a href="./schedule.html">schedule</a></li>
+                </ul>
+            </div>
+            -->
+        </div>
     </header>
 
     <div class="top-wrapper">
-      <div class="container">
-        <h2>Please Registration</h2>
-        <form class="login" action="/index" method="POST">
-          <input class="id" type="text" name="userid" placeholder="Enter ID" />
-          <input
-            class="pass"
-            type="text"
-            name="password"
-            placeholder="Enter PASS"
-          />
-          <button class="sendButton" type="submit">送信</button>
-        </form>
+        <div class="container">
+            <h2>新規登録</h2>
+            <form class="login" action="/index" method="POST">
+                <input class="name" type="text" name="username" placeholder="Enter username">
+                <input class="pass" type="password" name="password" placeholder="Enter PASS">
+                <button class="sendButton"type="submit">登録</button>
+            </form>
+            <div class="trans_registration">
+              <a class="trans_registration" href="/">登録済みの方はこちら</a>
+            </div>
+        </div>
+        <!--<a href="./index.html">登録済みの方はこちら</a>-->
       </div>
     </div>
+    
+   
 
     <div class="middle-wrapper"></div>
 
+  
+
     <div class="bottom-wrapper"></div>
+    
+
 
     <!--
-        <ul id="messages"></ul>
-        <form id="form" action="">
-            <input id="input" autocomplete="off" /><button>Send</button>
-        </form>
-        -->
+    <ul id="messages"></ul>
+    <form id="form" action="">
+        <input id="input" autocomplete="off" /><button>Send</button>
+    </form>
+    -->
 
     <footer>
       <div class="container">
@@ -77,30 +88,30 @@
       </div>
     </footer>
 
-    <!--
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      let socket = io();
+<!--
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  let socket = io();
 
-      const form = document.getElementById("form");
-      const input = document.getElementById("input");
-      const messages = document.getElementById("messages");
+  const form = document.getElementById("form");
+  const input = document.getElementById("input");
+  const messages = document.getElementById("messages");
 
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
-        if (input.value) {
-          socket.emit("chat message", input.value);
-          input.value = "";
-        }
-      });
+  form.addEventListener("submit", function (e) {
+    e.preventDefault();
+    if (input.value) {
+      socket.emit("chat message", input.value);
+      input.value = "";
+    }
+  });
 
-      socket.on("chat message", function (msg) {
-        let item = document.createElement("li");
-        item.textContent = msg;
-        messages.appendChild(item);
-        window.scrollTo(0, document.body.scrollHeight);
-      });
-    </script>
-    -->
-  </body>
+  socket.on("chat message", function (msg) {
+    let item = document.createElement("li");
+    item.textContent = msg;
+    messages.appendChild(item);
+    window.scrollTo(0, document.body.scrollHeight);
+  });
+</script>
+-->
+</body>
 </html>
