--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -45,11 +45,16 @@
     <div class="top-wrapper">
       <div class="container">
         <h2>Please sign in</h2>
-        <form class="login" action="" method="POST">
-          <input class="id" type="text" name="userid" placeholder="Enter ID" />
+        <form class="login" action="/login" method="POST">
+          <input
+            class="id"
+            type="text"
+            name="username"
+            placeholder="Enter ID"
+          />
           <input
             class="pass"
-            type="text"
+            type="password"
             name="password"
             placeholder="Enter PASS"
           />
