--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -45,7 +45,7 @@
     <div class="top-wrapper">
       <div class="container">
         <h2>Please sign in</h2>
-        <form class="login" action="/login" method="POST">
+        <form class="login" action="" method="POST">
           <input
             class="id"
             type="text"
