ユーザー名をタイトルに表示させました

--- a/app/views/students.ejs
+++ b/app/views/students.ejs
@@ -14,7 +14,7 @@
     <!--script-->
     <script type="text/javascript" src="/javascript/loading.js"></script>
 
-    <title>生徒用画面</title>
+    <title><%= username %></title>
   </head>
 
   <!--loading-->
