--- a/app/views/teacher.ejs
+++ b/app/views/teacher.ejs
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <title>先生用画面</title>
+    <title><%= username %></title>
   </head>
 
   <!--loading-->
