--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--icon-->
-    <link rel="icon" href="./img/oral-icon.svg" type="image/svg+xml" />
+    <link
+      rel="icon"
+      href="https://lh5.googleusercontent.com/qq75b9ARyuscR-o9P36tLOD5fBE4SHH_QKCH0ybfNuOh6y6SkR9SPJ4PsOz1qj2XsaVuZQYmyykhqEe-fB7yt5v4h3wIcU8"
+    />
 
     <!--css-->
     <link rel="stylesheet" href="/stylesheets/stylesheet-index.css" />
@@ -67,8 +70,6 @@
           <a class="trans_registration" href="registration"
             >登録済みでない方はこちら</a
           >
-          <a class="trans_registration" href="students">生徒</a>
-          <a class="trans_registration" href="teacher">先生</a>
         </div>
       </div>
     </div>
