未確認物体

--- a/app/public/stylesheets/stylesheet-index.css
+++ b/app/public/stylesheets/stylesheet-index.css
@@ -327,3 +327,14 @@ footer {
 footer h7 {
   font-size: 20px;
 }
+
+/* メッセージのスタイル */
+.student-message {
+  text-align: left;
+  color: blue;
+}
+
+.teacher-message {
+  text-align: right;
+  color: green;
+}
