--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -47,7 +47,7 @@
 
     <div class="top-wrapper">
       <div class="container">
-        <h2>Please sign in</h2>
+        <h2>ログインフォーム</h2>
         <form class="login" action="<%= route %>" method="POST">
           <input
             class="id"
