--- a/app/views/registration.ejs
+++ b/app/views/registration.ejs
@@ -47,7 +47,7 @@
 
     <div class="top-wrapper">
       <div class="container">
-        <h2>Please Registration</h2>
+        <h2>登録フォーム</h2>
         <form class="login" action="" method="POST">
           <input
             class="id"
