--- a/app/public/stylesheets/stylesheet-index.css
+++ b/app/public/stylesheets/stylesheet-index.css
@@ -4,7 +4,9 @@ body {
   max-height: 100%;
   margin: 0px;
 }
-
+h2 {
+  font-family: sans-serif;
+}
 .background {
   /*background-image: url('../image/oral-bg2.jpg');*/
   background-attachment: fixed;
