重複するユーザーの登録に対して、エラーメッセージを表示するようにしました

--- a/app/views/students.ejs
+++ b/app/views/students.ejs
@@ -47,7 +47,7 @@
 
     <div class="top-wrapper">
       <ul id="messages"></ul>
-      <form id="form" action="">
+      <form id="form" action="" method="post">
         <input id="input" autocomplete="off" /><button>Send</button>
       </form>
     </div>
