メッセージリストをteacher.ejsに表示できるようにしました

--- a/app/public/stylesheets/stylesheet-index.css
+++ b/app/public/stylesheets/stylesheet-index.css
@@ -316,7 +316,7 @@ a.btn-svg span {
 }
 
 footer {
-  /*background-color: rgb(240,240,240);*/
+  background-color: rgb(240, 240, 240);
 
   color: rgb(240, 240, 240);
   max-width: 100%;
