できたとこまで

--- a/app/views/teacher.ejs
+++ b/app/views/teacher.ejs
@@ -73,9 +73,10 @@
     <div class="top-wrapper">
       <div class="Message-form">
         <ul id="messages"></ul>
-        <form id="form" action="">
+        <form id="form" action="/teacher/message" method="post">
           <input
             id="input"
+            name="message"
             autocomplete="off"
             placeholder="Enter Message"
           /><button>Send</button>
