--- a/app/views/students.ejs
+++ b/app/views/students.ejs
@@ -4,22 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--icon-->
-    <link
-      rel="icon"
-      href="https://lh5.googleusercontent.com/qq75b9ARyuscR-o9P36tLOD5fBE4SHH_QKCH0ybfNuOh6y6SkR9SPJ4PsOz1qj2XsaVuZQYmyykhqEe-fB7yt5v4h3wIcU8"
-    />
+<!--icon-->
+<link
+  rel="icon"
+  href="https://lh5.googleusercontent.com/qq75b9ARyuscR-o9P36tLOD5fBE4SHH_QKCH0ybfNuOh6y6SkR9SPJ4PsOz1qj2XsaVuZQYmyykhqEe-fB7yt5v4h3wIcU8"
+/>
 
-    <!--css-->
-    <link rel="stylesheet" href="/stylesheets/stylesheet-index.css" />
-    <link rel="stylesheet" href="/stylesheets/stylesheet-loading.css" />
+<!--css-->
+<link rel="stylesheet" href="/stylesheets/stylesheet-index.css" />
+<link rel="stylesheet" href="/stylesheets/stylesheet-loading.css" />
 
-    <!--script-->
-    <script type="text/javascript" src="/javascript/loading.js"></script>
+<!--script-->
+<script type="text/javascript" src="/javascript/loading.js"></script>
 
-    <title><%= username %></title>
+<title><%= username %></title>
   </head>
-
   <!--loading-->
   <div id="loader">
     <div class="spinner">
@@ -30,7 +29,6 @@
       <div class="rect5"></div>
     </div>
   </div>
-
   <body>
     <header>
       <div class="container">
@@ -45,46 +43,47 @@
       </div>
     </header>
 
-    <div class="top-wrapper">
-      <ul id="messages"></ul>
-      <form id="form" action="" method="post">
-        <input id="input" autocomplete="off" /><button>Send</button>
-      </form>
-    </div>
-    <div class="middle-wrapper"></div>
-    <div class="bottom-wrapper"></div>
+<div class="top-wrapper">
+  <ul id="messages"></ul>
+  <form id="form" action="/students/message" method="post">
+    <input id="input" name="message" autocomplete="off" /><button>Send</button>
+  </form>
+</div>
+<div class="middle-wrapper"></div>
+<div class="bottom-wrapper"></div>
 
-    <footer>
-      <div class="container">
-        <a
-          >@2024 ISDL Created by Yusuke Okahata ＆ Naoki Kadoya YYYY/MM/DD<br />ver1.0.0</a
-        >
-      </div>
-    </footer>
+<footer>
+  <div class="container">
+    <a
+      >@2024 ISDL Created by Yusuke Okahata ＆ Naoki Kadoya YYYY/MM/DD<br />ver1.0.0</a
+    >
+  </div>
+</footer>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script>
-      let socket = io();
+<script src="/socket.io/socket.io.js"></script>
+<script>
+  let socket = io();
 
-      const form = document.getElementById("form");
-      const input = document.getElementById("input");
-      const messages = document.getElementById("messages");
-      //console.log(form);
+  const form = document.getElementById("form");
+  const input = document.getElementById("input");
+  const messages = document.getElementById("messages");
+  //console.log(form);
 
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
-        if (input.value) {
-          socket.emit("chat message", input.value);
-          input.value = "";
-        }
-      });
+  form.addEventListener("submit", function (e) {
+    e.preventDefault();
+    if (input.value) {
+      socket.emit("chat message", { message: input.value, sender: "student" });
+      input.value = "";
+    }
+  });
 
-      socket.on("chat message", function (msg) {
-        let item = document.createElement("li");
-        item.textContent = msg;
-        messages.appendChild(item);
-        window.scrollTo(0, document.body.scrollHeight);
-      });
+  socket.on("chat message", function (msg) {
+    let item = document.createElement("li");
+    item.textContent = msg.message;
+    item.className = msg.sender === "student" ? "right" : "left";
+    messages.appendChild(item);
+    window.scrollTo(0, document.body.scrollHeight);
+  });
     </script>
   </body>
 </html>
