--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -43,7 +43,7 @@
     <div class="top-wrapper">
       <div class="container">
         <h2>ログイン</h2>
-        <form class="login" action="<%= route %>" method="POST">
+        <form class="login" action="/students" method="POST">
           <input class="name" type="text" name="username" placeholder="Enter username" />
           <input class="pass" type="password" name="password" placeholder="Enter PASS" />
           <button class="sendButton" type="submit">ログイン</button>
@@ -53,8 +53,6 @@
 
         <div class="trans_registration">
           <a class="trans_registration" href="registration">登録済みでない方はこちら</a>
-          <a class="trans_registration" href="students">生徒</a> <!--完成したら消す-->
-          <a class="trans_registration" href="teacher">先生</a> <!--完成したら消す-->
         </div>
       </div>
     </div>
