--- a/app/views/students.ejs
+++ b/app/views/students.ejs
@@ -18,6 +18,8 @@
 <script type="text/javascript" src="/javascript/loading.js"></script>
 
 <title><%= username %></title>
+
+<script src="/socket.io/socket.io.js"></script>
   </head>
   <!--loading-->
   <div id="loader">
@@ -33,12 +35,7 @@
     <header>
       <div class="container">
         <a href="/">
-          <img
-            class="header-logo"
-            width="150"
-            height="70"
-            src="/image/ISDL_logo.png"
-          />
+          <img class="header-logo" width="150" height="70" src="/image/ISDL_logo.png" />
         </a>
       </div>
     </header>
@@ -46,7 +43,7 @@
 <div class="top-wrapper">
   <ul id="messages"></ul>
   <form id="form" action="/students/message" method="post">
-    <input id="input" name="message" autocomplete="off" /><button>Send</button>
+    <input id="input" name="message" autocomplete="off" /><button>送信</button>
   </form>
 </div>
 <div class="middle-wrapper"></div>
@@ -60,7 +57,6 @@
   </div>
 </footer>
 
-<script src="/socket.io/socket.io.js"></script>
 <script>
   let socket = io();
 
@@ -72,7 +68,7 @@
   form.addEventListener("submit", function (e) {
     e.preventDefault();
     if (input.value) {
-      socket.emit("chat message", { message: input.value, sender: "student" });
+      socket.emit("chat message", { message: input.value, sender: '<%= username %>' });
       input.value = "";
     }
   });
@@ -84,6 +80,6 @@
     messages.appendChild(item);
     window.scrollTo(0, document.body.scrollHeight);
   });
-    </script>
+</script>
   </body>
 </html>
