--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -33,16 +33,14 @@
 
   <body>
     <header>
-      <div class="container">
-        <a href="/">
-          <img
-            class="header-logo"
-            width="150"
-            height="70"
-            src="/image/ISDL_logo.png"
-          />
-        </a>
-      </div>
+      <a class="header-logo" href="/">
+        <img
+          class="header-logo"
+          width="150"
+          height="70"
+          src="/image/ISDL_logo.png"
+        />
+      </a>
     </header>
 
     <div class="top-wrapper">
