--- a/app/views/registration.ejs
+++ b/app/views/registration.ejs
@@ -33,7 +33,7 @@
 
   <body>
     <header>
-      <div class="container">
+      <div class="header-logo">
         <a href="/">
           <img
             class="header-logo"
