--- a/app/views/teacher.ejs
+++ b/app/views/teacher.ejs
@@ -59,7 +59,7 @@
     <div class="space"></div>
 
     <header>
-      <div class="container">
+      <div class="header-logo">
         <a href="/">
           <img
             class="header-logo"
@@ -68,6 +68,7 @@
             src="/image/ISDL_logo.png"
           />
         </a>
+        <button class="header__button" onclick="navigate()">LOGOUT</button>
     </header>
 
     <div class="top-wrapper">
@@ -109,6 +110,12 @@
         >
       </div>
     </footer>
+
+    <script>
+      function navigate() {
+        window.location.href = "/";
+      }
+    </script>
 
     <!--サイドバー-->
     <script
