よっしゃー！

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -43,7 +43,7 @@
     <div class="top-wrapper">
       <div class="container">
         <h2>ログイン</h2>
-        <form class="login" action="/students" method="POST">
+        <form class="login" action="/" method="POST">
           <input class="name" type="text" name="username" placeholder="Enter username" />
           <input class="pass" type="password" name="password" placeholder="Enter PASS" />
           <button class="sendButton" type="submit">ログイン</button>
