--- a/app/views/status.ejs
+++ b/app/views/status.ejs
@@ -72,7 +72,12 @@
     </div>
 
     <div class="top-wrapper">
-      <h2>返信状況確認するページです</h2>
+      <h2>返信状況確認ページ</h2>
+      <h3>
+        未返信：<%= unrepliedCount %>件 未返信のID：<%=
+        unrepliedUsers.join(',')%>
+      </h3>
+      <h3>返信済：<%= repliedCount %>件</h3>
     </div>
     <div class="middle-wrapper"></div>
     <div class="bottom-wrapper"></div>
