--- a/app/views/status.ejs
+++ b/app/views/status.ejs
@@ -74,8 +74,7 @@
     <div class="top-wrapper">
       <h2>返信状況確認ページ</h2>
       <h3>
-        未返信：<%= unrepliedCount %>件 未返信のID：<%=
-        unrepliedUsers.join(',')%>
+        未返信：<%= unrepliedCount %>件 未返信のID：<%= unrepliedUsers.join(', ') %>
       </h3>
       <h3>返信済：<%= repliedCount %>件</h3>
     </div>
