--- a/app/views/teacher.ejs
+++ b/app/views/teacher.ejs
@@ -92,6 +92,7 @@
     </div>
   -->
     <div class="top-wrapper">
+      <!--
       <div class="container">
         <h2>Message List</h2>
         <hr width="60%" />
@@ -105,6 +106,7 @@
           <% }); %>
         </ul>
       </div>
+      -->
 
       <div class="Message-form">
         <div class="chat-messages" id="chat-messages">
@@ -121,6 +123,7 @@
           </div>
           <% } %>
         </div>
+
         <ul id="messages"></ul>
         <form id="form" action="/teacher/send" method="POST">
           <input
@@ -130,6 +133,11 @@
             placeholder="Enter Message"
           />
           <button>送信</button>
+          <select name="selectedUser">
+            <% userList.forEach(user => { %>
+            <option value="<%= user.username %>"><%= user.username %></option>
+            <% }); %>
+          </select>
         </form>
       </div>
     </div>
