--- a/app/public/stylesheets/stylesheet-index.css
+++ b/app/public/stylesheets/stylesheet-index.css
@@ -221,19 +221,19 @@ nav li {
 }
 
 .message-send2 {
-  color: #953ecf;
+  color: yellow;
 }
 
 .message {
   display: inline-block;
-  background-color: #e1ffc7; /* メッセージの背景色 */
-  border: 1px solid #a3d7a5; /* メッセージの枠線 */
+  background-color: #4481f0; /* メッセージの背景色 */
+  border: 1px solid #1654bf; /* メッセージの枠線 */
   border-radius: 15px; /* 角を丸くする */
   padding: 10px 15px; /* 内側の余白 */
   margin: 5px 0; /* 外側の余白 */
   font-family: Arial, sans-serif; /* フォントの設定 */
   font-size: 14px; /* フォントサイズ */
-  color: #333; /* 文字色 */
+  color: white; /* 文字色 */
 }
 
 .student-message {
