--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -9,6 +9,7 @@
       rel="icon"
       href="https://lh5.googleusercontent.com/qq75b9ARyuscR-o9P36tLOD5fBE4SHH_QKCH0ybfNuOh6y6SkR9SPJ4PsOz1qj2XsaVuZQYmyykhqEe-fB7yt5v4h3wIcU8"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!--css-->
     <link rel="stylesheet" href="/stylesheets/stylesheet-index.css" />
@@ -44,8 +45,18 @@
       <div class="container">
         <h2>ログイン</h2>
         <form class="login" action="/" method="POST">
-          <input class="name" type="text" name="username" placeholder="Enter username" />
-          <input class="pass" type="password" name="password" placeholder="Enter PASS" />
+          <div class="input-container">
+            <input class="name" type="text" name="username" placeholder="Enter username" />
+            <div class="pass-container">
+              <input class="pass" type="password" name="password" placeholder="Enter PASS" />
+              <i class="fas fa-eye toggle-password"></i>
+            </div>
+          </div>
+          
+          <!--<input class="pass" type="password" name="password" placeholder="Enter PASS" />
+          <label>
+            <input type="checkbox" id="showPassword"> パスワードを表示
+          </label>-->
           <button class="sendButton" type="submit">ログイン</button>
         </form>
 
@@ -75,6 +86,17 @@
         >
       </div>
     </footer>
+
+    <!--パスワードの可視化切り替え-->
+    <script>
+      document.querySelector('.toggle-password').addEventListener('click', function() {
+          var passwordField = document.querySelector('.pass');
+          var type = passwordField.type === 'password' ? 'text' : 'password';
+          passwordField.type = type;
+          this.classList.toggle('fa-eye');
+          this.classList.toggle('fa-eye-slash');
+      });
+    </script>
 
     <!--
     <script src="/socket.io/socket.io.js"></script>
