--- a/app/views/registration.ejs
+++ b/app/views/registration.ejs
@@ -9,6 +9,7 @@
       rel="icon"
       href="https://lh5.googleusercontent.com/qq75b9ARyuscR-o9P36tLOD5fBE4SHH_QKCH0ybfNuOh6y6SkR9SPJ4PsOz1qj2XsaVuZQYmyykhqEe-fB7yt5v4h3wIcU8"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <!--css-->
     <link rel="stylesheet" href="/stylesheets/stylesheet-index.css" />
@@ -53,11 +54,21 @@
     <div class="top-wrapper">
         <div class="container">
             <h2>新規登録</h2>
+            <!--
             <form class="login" action="" method="POST">
                 <input class="name" type="text" name="username" placeholder="Enter username">
                 <input class="pass" type="password" name="password" placeholder="Enter PASS">
                 <button class="sendButton"type="submit">登録</button>
             </form>
+          -->
+          <form class="login" action="" method="POST">
+            <input class="name" type="text" name="username" placeholder="Enter username">
+            <div class="pass-container">
+                <input class="pass" type="password" name="password" placeholder="Enter PASS">
+                <i class="fas fa-eye toggle-password"></i>
+            </div>
+            <button class="sendButton" type="submit">登録</button>
+        </form>
 
             <p style="color: red"><%= error %></p>
             
@@ -93,6 +104,16 @@
         >
       </div>
     </footer>
+
+    <script>
+      document.querySelector('.toggle-password').addEventListener('click', function() {
+          var passwordField = document.querySelector('.pass');
+          var type = passwordField.type === 'password' ? 'text' : 'password';
+          passwordField.type = type;
+          this.classList.toggle('fa-eye');
+          this.classList.toggle('fa-eye-slash');
+      });
+  </script>
 
 <!--
 <script src="/socket.io/socket.io.js"></script>
