--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -43,7 +43,7 @@
 
     <div class="top-wrapper">
       <div class="container">
-        <h2>ログイン</h2>
+        <h2>ログインフォーム</h2>
         <form class="login" action="/" method="POST">
           <div class="input-container">
             <input class="name" type="text" name="username" placeholder="Enter username" />
