--- a/app/views/registration.ejs
+++ b/app/views/registration.ejs
@@ -53,7 +53,7 @@
 
     <div class="top-wrapper">
         <div class="container">
-            <h2>新規登録</h2>
+            <h2>登録フォーム</h2>
             <!--
             <form class="login" action="" method="POST">
                 <input class="name" type="text" name="username" placeholder="Enter username">
